--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ round-avatar: true
 # Uncomment the links you want to show and add your information to each one.
 # If you don't want to show a link to an RSS feed, set rss to "false".
 social-network-links:
-  email: "liuyuan513@gmail.com"
+#  email: "liuyuan513@gmail.com"
   facebook: false
   github: BioYLiu
   twitter: false
